DAQ-3380 Refactor FieldUtils & FieldValue
- simplify logic
- use standard formatting
- check for null pointers

Change-Id: If020b8a776f7e9acbe8aebc4852ca28dd8cabfe6